Added documentation for SkillController
